--- a/public/index.html
+++ b/public/index.html
@@ -25,19 +25,19 @@
       data-logo_alignment="left"
     ></div>
 
-    <button id="google_signout">
-      Signout
-    </button>
+    <button id="google_signout">Signout</button>
 
     <script src="https://accounts.google.com/gsi/client" async defer></script>
 
     <script>
       function handleCredentialResponse(response) {
-
         // Google Token: ID_TOKEN
         const body = { id_token: response.credential };
-        
-        fetch("http://localhost:8081/api/auth/google", {
+        const url = window.location.hostname.includes("localhost")
+          ? "http://localhost:8081/api/auth/google"
+          : "https://restserver-sanb.herokuapp.com/api/auth/google";
+
+        fetch(url, {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
@@ -47,23 +47,21 @@
           .then((resp) => resp.json())
           .then((resp) => {
             console.log(resp);
-            localStorage.setItem('email', resp.usuario.correo)
+            localStorage.setItem("email", resp.usuario.correo);
           })
           .catch(console.warn);
       }
 
-      const button = document.getElementById('google_signout');
+      const button = document.getElementById("google_signout");
       button.onclick = () => {
-
         console.log(google.accounts.id);
         google.accounts.id.disableAutoSelect();
 
-        google.accounts.id.revoke( localStorage.getItem('email'), done => {
+        google.accounts.id.revoke(localStorage.getItem("email"), (done) => {
           localStorage.clear();
           location.reload();
         });
-
-      }
+      };
     </script>
   </body>
 </html>
